--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.App {
+.app {
   text-align: center;
   padding: 0px;
   margin: 0px;
 }
 
-.App-header {
+.appHeader {
   margin-top: 0px;
   background-color: #282c34;
   min-height: 100vh;
